--- a/AppTemplate/index.html
+++ b/AppTemplate/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <title>Creative - Start Bootstrap Theme</title>
-
+    <link rel="stylesheet" href="">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
